cmake_minimum_required(VERSION 3.0.0)
project(bFlight64 VERSION 0.1.0)
include_directories( ${MY_SOURCE_DIR} )
include(CTest) 
enable_testing()

add_executable(${PROJECT_NAME} game.cpp myfont.cpp gameCommon.cpp bsideFly.cpp driveGame.cpp rotoZoomer.cpp mazeRunner.cpp mazeGenerator.cpp plasma.cpp)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

if (UNIX)
    find_package(Curses)
    find_package(SDL2)
    if (SDL2_FOUND)
        add_definitions(SDL2_FOUND)
        include_directories(${SDL2_INCLUDE_DIRS})
        target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
    endif (SDL2_FOUND)
    if (NOT SDL2_FOUND)
        include_directories(${CURSES_INCLUDE_DIR})
        target_link_libraries(${PROJECT_NAME} ${CURSES_LIBRARIES})
    endif (NOT SDL2_FOUND)
endif (UNIX)

include(CPack)
